KSP: performance improvements (#9832)